k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-hub-deployment
spec:
  selector:
    matchLabels:
      app: the-hub
  template:
    metadata:
      labels:
        app: the-hub
    spec:
      containers:
      - name: the-hub-main
        image: us.gcr.io/rocketseat-42/the-hub:latest
        ports:
        - containerPort: 3333
      - name: the-hub-logger
        image: us.gcr.io/rocketseat-42/the-hub-logger:latest
        ports:
        - containerPort: 3334
