k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: the-hub
  name: the-hub
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 3333
  selector:
    app: the-hub
