k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-hub
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - hub.rocketseat.dev
      secretName: the-hub-tls
  rules:
    - host: hub.rocketseat.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-hub
                port:
                  number: 443
